<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/marginSmall"
    android:layout_marginTop="@dimen/marginSmall"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/reset"
        style="@style/resetBtn"
        android:onClick="reset"
        android:text="@string/reset" />

    <LinearLayout
        android:id="@+id/team1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/marginSmall"
        android:layout_marginStart="@dimen/marginSmall"
        android:orientation="vertical">

        <TextView
            android:id="@+id/team1_name"
            style="@style/txtBase"
            android:text="@string/team1"
            android:textSize="@dimen/textMedium" />

        <TextView
            android:id="@+id/team1_score"
            style="@style/txtBase"
            android:text="@string/score"
            android:textSize="@dimen/textLarge" />

        <Button
            android:id="@+id/team1_button1"
            style="@style/btnBase"
            android:layout_marginBottom="@dimen/marginSmall"
            android:onClick="team1_button1"
            android:text="@string/point1" />

        <Button
            android:id="@+id/team1_button2"
            style="@style/btnBase"
            android:onClick="team1_button2"
            android:text="@string/lucky"
            android:tooltipText="@string/btn2ToolTip" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/team2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/marginSmall"
        android:layout_marginRight="@dimen/marginSmall"
        android:orientation="vertical">

        <TextView
            android:id="@+id/team2_name"
            style="@style/txtBase"
            android:text="@string/team2"
            android:textSize="@dimen/textMedium" />

        <TextView
            android:id="@+id/team2_score"
            style="@style/txtBase"
            android:text="@string/score"
            android:textSize="@dimen/textLarge" />

        <Button
            android:id="@+id/team2_button1"
            style="@style/btnBase"
            android:layout_marginBottom="@dimen/marginSmall"
            android:onClick="team2_button1"
            android:text="@string/point1" />

        <Button
            android:id="@+id/team2_button2"
            style="@style/btnBase"
            android:onClick="team2_button2"
            android:text="@string/lucky"
            android:tooltipText="@string/btn2ToolTip" />
    </LinearLayout>


</RelativeLayout>